--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "First deployable project",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc --outDir dist",
@@ -25,9 +26,11 @@
     "eslint": "^9.24.0",
     "express": "^5.1.0",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "npm": "^11.2.0",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
